--- a/GO_IPI/GO_IPI_dsgen.Rmd
+++ b/GO_IPI/GO_IPI_dsgen.Rmd
@@ -34,7 +34,7 @@ MITAB = "tab25"
 EBI_GOA_nonIntAct = data.table()
 if(database %in% providers){
         ## Query for the number of interactions
-        PSICQUIC_query = paste("species:",SPECIES_ID, sep = "")
+        PSICQUIC_query = paste("taxidA:",SPECIES_ID," AND taxidB:",SPECIES_ID, sep = "")
         PSICQUIC_query1 = paste0(PSICQUIC_query, "?format=count") 
         N_interactions <- unlist(rawQuery(psicquic, database, PSICQUIC_query1))
         
@@ -87,7 +87,7 @@ I calculate how many interactions in EBI_GOA_nonIntAct dataset match to IMEx.
 
 ```{r biogrid_vs_imex, message=FALSE, warning=FALSE, fig.width=4, fig.height=2}
 imex = fread("https://raw.githubusercontent.com/pporrasebi/darkspaceproject/master/IMEx/results/imex_full.txt", header = T, sep = "\t", colClasses = "character")
-imex_human = imex[taxid_a == "9606" | taxid_b == "9606",]
+imex_human = imex[taxid_a == "9606" & taxid_b == "9606",]
 N_imex = length(imex_human[, unique(pair_id_clean)])
 N_EBI_GOA_nonIntAct = length(EBI_GOA_nonIntAct[,unique(pair_id_clean)])
 N_overlap = sum(!is.na(match(EBI_GOA_nonIntAct[,unique(pair_id_clean)], imex_human[, unique(pair_id_clean)])))
