--- a/dsp_listchecker/dsp_listchecker.Rmd
+++ b/dsp_listchecker/dsp_listchecker.Rmd
@@ -15,9 +15,11 @@ Small script to check which papers contain certain UniProt accessions in the Dar
 
 #### Libraries
 ```{r message=FALSE,warning=FALSE}
-require(data.table)
-require(xlsx)
-require(splitstackshape)
+dyn.load('/Library/Java/JavaVirtualMachines/jdk1.8.0_161.jdk/Contents/Home/jre/lib/server/libjvm.dylib')
+library(rJava)
+library(data.table)
+library(xlsx)
+library(splitstackshape)
 ```
 
 #### Data upload
